  * knitml-el: the Knitting Expression Language (formlery in knitml-tools)
  * knitml-command-line: command line only utilities

knitml-core
* Added 'version' to pattern element (for compatibility tracking)
  
knitml-pattern-renderer
* Chart rendering
* Internal refactoring of model (from visitor to event listener)

Known Incompatibilities:
* Instruction and inline-instruction elements defined under an instruction-definitions section must have the 'shape' attribute set

Changes in version 0.4.1 (2008-12-04)
-------------------------------------
General
* Added information element to row element (for annotations)

knitml-tools
* Fixed Bug 31: validate / validateAndRender command lines failing

knitml-pattern-renderer
* Full Spanish translation of renderer and patterns

Changes in version 0.4.0 (2008-11-27)
-------------------------------------
General
* Support for increases
* Support for stitch crosses (i.e. cables)
* Support for custom inline / block instruction definitions
* Support for instruction merging
* Support for applying more than one block instruction at the same time 
* Some incompatible XML schema changes in this release. E-mail Jonathan for details.
* More complete support for internationalized patterns, including global plural form handling.
* Major documentation enhancements, including a complete KnittingEL reference guide.
* Internal creation of an XML object model (using JiBX); dom4j dependency dropped
* Uses newer JAXP 1.3 validation API for XML syntax checking

Changes in version 0.3.0 (2008-06-06)
-------------------------------------
General
* Created the User's Guide (see docs/users-guide.html and docs/users-guide.pdf)
* Reworked instruction element so that it is only necessary to specify when repeating
* Added section element for paragraph formatting
* Forced row vs. round designation to reflect current knitting state

knitml-tools
* Vastly improved support for the Knitting Expression Language (a.k.a. GroovyKnit) 

knitml-validation