@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<pattern xmlns="http://www.knitml.com/schema/pattern"
+<pattern xmlns="http://www.knitml.com/schema/pattern" version="0.5"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://www.knitml.com/schema/pattern http://www.knitml.com/schema/pattern-0.5.xsd">
 	<directives>
